--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "express": "^4.15.3",
     "fastclick": "^1.0.6",
     "less-loader": "^2.2.3",
+    "node-base64-image": "^1.0.4",
+    "superagent": "^3.5.2",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
     "vuex": "^2.3.1",
